# rdkb-RebootManager

./: CONTRIBUTING.md  ChangeLog  Makefile.orig  README  cmpnt_build_custom_pre_arm.mk  configure.ac  genautotools.ini
config/: RebootManager_arm.xml  RebootManager_pc.xml
doc/: CCSP_Reboot_Manager_SAS.docx  Reboot Manager_Versionnumber release notes.docx
source/: Makefile.am
source-arm/: CcspRmHal.c
source-mips/: CcspRmHal.c
source-pc/: CcspRmHal.c
source/DataModelBackEnd/: cosa_apis_configuration.c  cosa_apis_configuration.h  cosa_apis_reboot.c  cosa_apis_reboot.h  plugin_main.c  plugin_main.h  rm_util.c  rm_util.h
source/RmSsp/: CcspRmSsp  Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
